# longcallR

./: 404.html  Cargo.toml  LICENSE  README.md  ase.html  asj.html  citation.html  index.html  install.html  mkdocs.yml  usage.html
allele_specific/: ase.py  asj.py  asj_to_bed.py  longcallR-ase.py  longcallR-asj.py
ase/: index.html
asj/: index.html
citation/: index.html
demo/: chr20.fa.fai  demo.bam  demo.bam.bai
docs/: ase.md  asj.md  citation.md  index.md  install.md  usage.md
install/: index.html
scripts/: ASE_ASTS_analysis.py  add_T2TQ100_PS.py  analyze_dataset_quality.py  calculate_rnaedit_calls_precision.py  compare_sQTL_with_gtex.py  count_A-to-G.py  detect_allele_specific_expression.py  differential_splicing_identification.py  exon_junction_statistical_test.py  filter_single_site_phaseset.py  find_haplotype_specific_isoform.py  get_ase_calls.py  get_low_allele_fraction_truth.py  get_rnaedit_calls.py  hap_gt_eval.py  isoquant_analysis.py  plot_af_low_fraction_tp_fn.py  plot_allele_freq_distribution.py  plot_rnaedit_af.py  search_candidate_sQTL.py  whatshap_haplotag.sh  whatshap_phase.sh
search/: search_index.json
src/: align.rs  align2.rs  bam_pileup.rs  bam_reader.rs  base_matrix.rs  candidate.rs  exon.rs  fragment.rs  isolated_region.rs  main.rs  matrix.rs  phase.rs  pileup2matrix.rs  profile.rs  runt.rs  snp.rs  snpfrags.rs  som.rs  somatic.rs  thread.rs  util.rs  vcf.rs  work.rs
usage/: index.html
