[package]
name = "htslib_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-htslib = { version = "*", default-features = false }
rust-lapper = { version = "*", features = ["with_serde"] }
clap = { version = "4.4.4", features = ["derive"] }
seq_io = "0.3.1"
bio = "1.3.1"
threadpool = "1.0"
rayon = "1.8"

[profile.release]
opt-level = 3
