[package]
name = "longcallR"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-htslib = { version = "*", default-features = false }
rust-lapper = { version = "*", features = ["with_serde"] }
clap = { version = "4.4.4", features = ["derive"] }
seq_io = "0.3.1"
bio = "1.3.1"
threadpool = "1.0"
ndarray = "0.15.0"
rayon = "1.8"
rand = "0.8.5"
chrono = "0.4.33"
fishers_exact = "1.0.1"
mathru = "0.15.3"
probability = "0.20.3"
petgraph = "0.6.4"

[profile.release]
#debug = true
opt-level = 3
