[package]
name = "longcallR"
version = "1.11.0"
edition = "2021"
authors = ["Neng Huang <neng@ds.dfci.harvard.edu>"]
description = "A Rust tool for SNP calling and haplotype phasing with long RNA-seq reads."
license = "MIT"
repository = "https://github.com/huangnengCSU/longcallR"
homepage = "https://github.com/huangnengCSU/longcallR"
exclude = ["img/*", "demo/*", "target/*", "*.bam", "*.vcf"]

[dependencies]
rust-htslib = { version = "0.46.0", default-features = false }
rust-lapper = { version = "*", features = ["with_serde"] }
clap = { version = "4.4.4", features = ["derive"] }
bio = "1.3.1"
rayon = "1.8"
rand = "0.8.5"
mathru = "0.15.3"
probability = "0.20.3"
petgraph = "0.6.4"
itertools = "0.11.0"
noodles-vcf = "0.60.0"
lazy_static = "1.4.0"
statrs = "0.16"

[profile.release]
#debug = true
opt-level = 3
